--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -4,6 +4,7 @@
 
 {% endblock %}
 {% block content %}
+<div class="container"
 <div class="table-responsive">
     <table class="table table-bordered">
     <thead>
@@ -30,5 +31,6 @@
         {% endfor %}
     </tbody>
     </table>
+</div>
 </div>
 {% endblock %}
