--- a/pyetl_webapp/static/css/main.css
+++ b/pyetl_webapp/static/css/main.css
@@ -28,9 +28,6 @@
 
 thead {
     background-image: url("planche.png");
-
-
-
     position:sticky;
     top:0;
     z-index:10;
@@ -40,7 +37,7 @@ thead {
 
 h1 {
     text-align: center;
-    color: blue;
+    color: white;
     font: 2em Broadway;
     background-image: url("planche.png");
     background-repeat: no-repeat;
