--- a/pyetl_webapp/templates/plantage.html
+++ b/pyetl_webapp/templates/plantage.html
@@ -1,9 +1,14 @@
 
 {% extends "base.html" %}
-
+{% block title %}
+{% endblock %}
 {% block content %}
-       <h1>Mapper web interface</h1>
-       <img class="centre" src="{{url_for('static', filename='images/fail.gif')}}">
-       <h1>{{ text }}!</h1>
-
+       <h1>{{ text }} {{nom}}</h1>
+       <div class="container">
+       <div class="row">
+       <div class="col align-self-center">
+       <img src="{{url_for('static', filename='images/fail.gif')}}">
+       </div>
+       </div>
+       </div>
 {% endblock %}
