--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -74,8 +74,10 @@
 <script src="{{url_for('.static', filename='js/bootstrap/bootstrap.min.js')}}"</script>
 <script src="{{url_for('.static', filename='js/vue.js')}}"</script>
 
+</script>
 
 {% endblock %}
+
 
 {% endblock %}
 </div>
