--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -6,5 +6,6 @@
 
               <img class="d-block mx-auto" src="{{url_for('static', filename='images/rantanplan.gif')}}">
               <h1>{{ text }}</h1>
+              <h1>$(message)$</h1>
        </div>
 {% endblock %}
