--- a/pyetl_webapp/templates/index.html
+++ b/pyetl_webapp/templates/index.html
@@ -2,10 +2,11 @@
 {% extends "base.html" %}
 {% block title %}<h1>Mapper web interface</h1>{% endblock %}
 {% block content %}
-       <div class="container-fluid">
+       <div  class="container-fluid">
 
               <img class="d-block mx-auto" src="{{url_for('static', filename='images/rantanplan.gif')}}">
               <h1>{{ text }}</h1>
-              <h1>$(message)$</h1>
+              <h1>[[message]]</h1>
        </div>
+
 {% endblock %}
