--- a/pyetl_webapp/templates/scriptlist.html
+++ b/pyetl_webapp/templates/scriptlist.html
@@ -4,8 +4,7 @@
 
 {% endblock %}
 {% block content %}
-<div class="container"
-<div class="table-responsive">
+<div class="container">
     <table class="table table-bordered">
     <thead>
         <tr>
@@ -35,6 +34,5 @@
         {% endfor %}
     </tbody>
     </table>
-</div>
 </div>
 {% endblock %}
