--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -79,6 +79,6 @@
 
 {% endblock %}
 </div>
-<script src="{{url_for('.static', filename='js/specific/start_vue.js')}}"></script>
+{#<script src="{{url_for('.static', filename='js/specific/start_vue.js')}}"></script>
 </body>
 </html>
