--- a/pyetl_webapp/templates/prep_exec.html
+++ b/pyetl_webapp/templates/prep_exec.html
@@ -13,7 +13,7 @@
                 <div class="col">
                     <p style="text-align:right">voir resultat en mode webservice</p>
                 </div>
-                <div class="col">{{ form["x_ws"](**{"v-model":"x_ws", "class":"toto"}) }}</div>
+                <div class="col">{{ form["x_ws"](**{"v-model":"x_ws"}) }}</div>
             {%endif%}
             <div class="col">
             <p>{{ form.submit() }}</p>
