--- a/pyetl_webapp/templates/prep_exec.html
+++ b/pyetl_webapp/templates/prep_exec.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}<h1>lancement script {{ nom }}</h1>{% endblock %}
-
+'script
 {% block content %}
     <div class="container">
     <form action="" method="post" novalidate>
@@ -21,13 +21,12 @@
         </div>
         <div class="row align-items-center">
         <div class="col"><h2>.</h2></div>
-        <div class="col">
-            <p v-if="is_ws">url webservice : 
-            <a href=/mws/{{ url }}?{% 
-            for item in varlist if item[0]!="x_ws"%}{%
-                 if loop.index>1 %}&{%endif%}{{item[0]}}=[[ fields.{{item[0]}} ]]{% endfor %}
-            
-            </a></p></div>
+        <div class="col" v-if="is_ws">
+            <p>url du webservice<a :href="'/mws/{{ url }}?'+wsurl()">
+                /mws/{{ url }}?[[wsurl()]]
+                </a>
+            </p>
+        </div>
         </div>
 
 
@@ -38,7 +37,7 @@
                     <p style="text-align:right"> {{ item[1] }}</p>
                 </div>
                 <div class="col-sm">
-                    {{ form[item[0]](**{"v-model":"fields."+item[0]+"" }) }}
+                    {{ form[item[0]](**{"v-model":"fields."+item[0]+""}) }}
                 </div>
             </div>
         {% endfor %}
