--- a/pyetl_webapp/templates/base.html
+++ b/pyetl_webapp/templates/base.html
@@ -16,7 +16,7 @@
   <nav class="navbar  navbar-expand-lg navbar-dark bg-dark sticky-top">
     {#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
     <div class="container">
-      <a class="navbar-brand" href="/intro">
+      <a class="navbar-brand" href="/mw/intro">
         <img src="{{url_for('static', filename='images/favicon.ico')}} "
              class="d-inline-block align-center" alt="">
         pyetl
@@ -27,25 +27,25 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav nav-fill justify-content-center">
         <li class="nav_item">
-          <a class="nav-link" aria-current="page" href="/index">Home</a>
+          <a class="nav-link" aria-current="page" href="/mw/index">Home</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href="/login">login</a>
+          <a class="nav-link" href="/mw/login">login</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href="/scripts">scripts</a>
+          <a class="nav-link" href="/mw/scripts">scripts</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href="/macros">macros</a>
+          <a class="nav-link" href="/mw/macros">macros</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href="/apis">services_web</a>
+          <a class="nav-link" href="/mw/apis">services_web</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href="/help">help</a>
+          <a class="nav-link" href="/mw/help">help</a>
         </li>
         <li class="nav_item">
-          <a class="nav-link" href="/fmgr">fmgr</a>
+          <a class="nav-link" href="/mw/fmgr">fmgr</a>
         </li>
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
